third_party/move/move-compiler-v2/tests/more-v1/parser/spec_parsing_quantifier_fail.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/spec_parsing_quantifier_fail.move:3:33
  │
3 │         invariant forall x: num y: num : x == y;
  │                                 ^
  │                                 │
  │                                 Unexpected 'y'
  │                                 Expected ':'
